[package]
name = "moai"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moai"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang ={version= "=0.29.0", features= ["init-if-needed"]}
anchor-spl = {version = "=0.29.0", features =["memo"]}
whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.29.0" }
solana-program = ">=1.16, <1.18"
# https://github.com/solana-labs/solana/issues/34609
ahash = "=0.8.6"
